--- a/.github/workflows/bookCatalog.yaml
+++ b/.github/workflows/bookCatalog.yaml
@@ -44,13 +44,13 @@ jobs:
       # Builds the Docker image.
       #
       - name: Build
-        run: ./scripts/build-image.sh
+        run: ./scripts/cd/build-image.sh
 
       #
       # Publishes the Docker image to the container registry.
       #
       - name: Publish
-        run: ./scripts/push-image.sh
+        run: ./scripts/cd/push-image.sh
 
       #
       # Installs Kubectl and connects it to the cluster.
@@ -66,4 +66,4 @@ jobs:
       # Expands the configuration template and deploys the microservice.
       #
       - name: Deploy
-        run: ./scripts/deploy.sh
+        run: ./scripts/cd/deploy.sh
