--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -4,9 +4,8 @@ on:
   push:
     branches:
     - main
-  pull_request:
-    branches:
-    - main
+    paths:
+      - scripts/terraform/**
   workflow_dispatch:   
 
 #Special permissions required for OIDC authentication
