--- a/.github/workflows/inventoryManagement.yaml
+++ b/.github/workflows/inventoryManagement.yaml
@@ -32,7 +32,7 @@ jobs:
       CONTAINER_REGISTRY: ${{ secrets.CONTAINER_REGISTRY }}
       REGISTRY_UN: ${{ secrets.REGISTRY_UN }}
       REGISTRY_PW: ${{ secrets.REGISTRY_PW  }}
-      NAME: inventoryManagement
+      NAME: inventorymanagement
       DIRECTORY: inventory_management
 
     steps:
