--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -34,63 +34,24 @@ jobs:
       uses: actions/checkout@v4
 
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
-    # - name: Setup Terraform
-    #   uses: hashicorp/setup-terraform@v3
+    - name: Setup Terraform
+      uses: hashicorp/setup-terraform@v3
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
-    # - name: Terraform Init
-    #   working-directory: scripts/terraform
-    #   run: terraform init
+    - name: Terraform Init
+      working-directory: scripts/terraform
+      run: terraform init
 
     # Terraform format
-    # - name: Terraform Format  
-    #   run: terraform fmt -check 
+    - name: Terraform Format  
+      run: terraform fmt -check 
 
     # Generates an execution plan for Terraform 
-    # - name: Terraform Plan
-    #   working-directory: scripts/terraform
-    #   run: terraform plan
+    - name: Terraform Plan
+      working-directory: scripts/terraform
+      run: terraform plan
 
     # Terraform Apply
-    # - name: Terraform Apply
-    #   working-directory: scripts/terraform
-    #   run: terraform apply -auto-approve
-
-    # Attch Container Registry to AKS cluster
-    - name: Attch Container Registry to AKS cluster
-      run: az aks update --resource-group booksApp --name booksApp --attach-acr booksApp
-      env:
-        AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-        AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-        AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }}   
-
-    # Get AKS configs
-    - name: Get AKS Kubeconfig
-      run: az aks get-credentials --resource-group booksApp --name booksApp --file kubeconfig --overwrite-existing 
-      env:
-        AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-        AZURE_CLIENT_ID: ${{ secrets.AZURE_CLIENT_ID }}
-        AZURE_CLIENT_SECRET: ${{ secrets.AZURE_CLIENT_SECRET }}
-        AZURE_TENANT_ID: ${{ secrets.AZURE_TENANT_ID }} 
-
-    - name: Upload Kubeconfig as Secret
-      run: echo "KUBE_CONFIG=$(cat kubeconfig | base64)" >> $GITHUB_ENV
-
-    - name: Set KUBE_CONFIG Secret
-      uses: actions/github-script@v6
-      with:
-        script: |
-          const base64KubeConfig = process.env.KUBE_CONFIG;
-          await github.actions.createOrUpdateSecretForRepo({
-          owner: context.repo.owner,
-          repo: context.repo.repo,
-          secret_name: 'KUBE_CONFIG',
-          encrypted_value: base64KubeConfig
-          });
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-
-    
-
+    - name: Terraform Apply
+      working-directory: scripts/terraform
+      run: terraform apply -auto-approve
