--- a/.github/workflows/destroyInfrastructure.yml
+++ b/.github/workflows/destroyInfrastructure.yml
@@ -16,9 +16,10 @@ jobs:
       with:
         terraform_version: 1.5.6 
 
-    - name: Azure Login
-      run: az login --service-principal -u ${{ secrets.CLIENT_ID }} -p ${{ secrets.CLIENT_SECRET }} --tenant ${{ secrets.TENANT_ID }} 
-    
+    - uses: azure/login@v2
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
+
     - name: Terraform init
       working-directory: ./scripts/terraform
       run: terraform init
