--- a/.github/workflows/infrastructure.yml
+++ b/.github/workflows/infrastructure.yml
@@ -20,6 +20,7 @@ env:
   ARM_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
   ARM_TENANT_ID: "${{ secrets.AZURE_TENANT_ID }}"
   ARM_CLIENT_SECRET: "${{ secrets.AZURE_CLIENT_SECRET }}"
+  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
               
@@ -62,9 +63,9 @@ jobs:
           sudo apt install gh -y
           sudo apt install jq -y
 
-    - name: GitHub-Cli login
-      run: |
-          echo "${{ secrets.TOKEN }}" | gh auth login --with-token
+    - uses: azure/login@v2
+      with:
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     - name: Set Secrets
       run: |
