--- a/.github/workflows/inventoryManagement.yaml
+++ b/.github/workflows/inventoryManagement.yaml
@@ -1,9 +1,3 @@
-# 
-# GitHub Actions workflow.
-#
-# Automatically deploys the Node.js microservice to Kubernetes on push to the main branch.
-# For real use you might want to restrict this to the "prod" branch.
-#
 
 name: Deploy inventory-management
 
@@ -37,8 +31,22 @@ jobs:
 
     steps:
       
-      # Checks-out your repository under $GITHUB_WORKSPACE.
       - uses: actions/checkout@v3
+
+      - uses: azure/login@v2
+        with:
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+
+      - name: Azure CLI script
+        uses: azure/cli@v2
+        with:
+          azcliversion: latest
+          inlineScript: |
+            az account show
+
+      # Get AKS configs
+      - name: Connect to Kubernetes
+        run: az aks get-credentials --resource-group ${{ vars.AZURE_RESOURCE_NAME }} --name ${{ vars.APP_NAME }} 
 
       #
       # Builds the Docker image.
@@ -52,18 +60,13 @@ jobs:
       - name: Publish
         run: ./scripts/cd/push-image.sh
 
-      #
-      # Installs Kubectl and connects it to the cluster.
-      #
-      # https://github.com/marketplace/actions/kubernetes-cli-kubectl
-      #
-      - uses: tale/kubectl-action@v1
-        with:
-          base64-kube-config: ${{ secrets.KUBE_CONFIG }}
-          kubectl-version: v1.24.2
-      
-      #
-      # Expands the configuration template and deploys the microservice.
-      #
-      - name: Deploy
+      - name: Deploy microservice
         run: ./scripts/cd/deploy.sh
+
+      - name: Verify Kubernetes Deployment
+        run: |
+          echo "** kubectl get deployment **"
+          | kubectl get deployment |
+          kubectl get pods |
+          kubectl get services  
+    
