update az get credentials

--- a/.github/workflows/inventoryManagement.yaml
+++ b/.github/workflows/inventoryManagement.yaml
@@ -46,7 +46,7 @@ jobs:
 
       # Get AKS configs
       - name: Connect to Kubernetes
-        run: az aks get-credentials --resource-group ${{ vars.RESOURCE_NAME }} --name ${{ vars.APP_NAME }} 
+        run: az aks get-credentials --resource-group booksApp --name booksApp --overwrite-existing
 
       #
       # Builds the Docker image.
