add DATABASE URL as a secret

--- a/.github/workflows/bookCatalog.yaml
+++ b/.github/workflows/bookCatalog.yaml
@@ -26,6 +26,7 @@ jobs:
       CONTAINER_REGISTRY: ${{ secrets.CONTAINER_REGISTRY }}
       REGISTRY_UN: ${{ secrets.REGISTRY_UN }}
       REGISTRY_PW: ${{ secrets.REGISTRY_PW  }}
+      DATABASE_URL: ${{ secrets.DATABASE_URL }}
       NAME: bookcatalog
       DIRECTORY: book_catalog
 
