--- a/.github/workflows/inventoryManagement.yaml
+++ b/.github/workflows/inventoryManagement.yaml
@@ -67,7 +67,9 @@ jobs:
       - name: Verify Kubernetes Deployment
         run: |
           echo "** kubectl get deployment **"
-          | kubectl get deployment |
-          kubectl get pods |
-          kubectl get services  
+          kubectl get deployment
+          echo "** kubectl get pods **"
+          kubectl get pods
+          echo "** kubectl get services **"
+          kubectl get services 
     
