--- a/.github/workflows/destroyInfrastructure.yml
+++ b/.github/workflows/destroyInfrastructure.yml
@@ -13,8 +13,6 @@ jobs:
 
     - name: Set up Terraform
       uses: hashicorp/setup-terraform@v2
-      with:
-        terraform_version: 1.5.6 
 
     - uses: azure/login@v2
       with:
@@ -26,7 +24,7 @@ jobs:
 
     - name: Terraform Destroy
       working-directory: ./scripts/terraform
-      run: terraform destroy -auto-approve -var "resource_group_name=${{ vars.AZURE_RESOURCE_NAME }}" -var "location=${{ vars.AZURE_RESOURCE_LOCATION }}" -var "app_name=${{ vars.APP_NAME }}" -var "kubernetes_version=${{ vars.AZURE_AKS_VERSION }}"
+      run: terraform destroy -auto-approve -var "resource_group_name=booksApp"
 
     - name: Refresh terraform
       working-directory: ./scripts/terraform  
