--- a/.github/workflows/githubLogin.yaml
+++ b/.github/workflows/githubLogin.yaml
@@ -33,6 +33,10 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
+      - name: GitHub-Cli login
+        run: |
+          echo "${{ secrets.TOKEN }}" | gh auth login --with-token
+
       - name: Set Secrets
         run: |
           acr_name=$(az acr list | jq -r '.[0].loginServer')
@@ -41,5 +45,3 @@ jobs:
           az acr credential show --name "$acr_name" --query "{username:username, passwords:passwords[0].value}" --output json > credentials.json
           gh secret set REGISTRY_UN --body "$(cat credentials.json | jq -r '.username')"
           gh secret set REGISTRY_PW --body "$(cat credentials.json | jq -r '.passwords')"
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
