--- a/.github/workflows/githubLogin.yaml
+++ b/.github/workflows/githubLogin.yaml
@@ -10,14 +10,6 @@ permissions:
   pull-requests: write
   actions: write # Allow the workflow to write secrets to the repository
 
-#These environment variables are used by the terraform azure provider
-env:
-  ARM_CLIENT_ID: "${{ secrets.AZURE_CLIENT_ID }}"
-  ARM_SUBSCRIPTION_ID: "${{ secrets.AZURE_SUBSCRIPTION_ID }}"
-  ARM_TENANT_ID: "${{ secrets.AZURE_TENANT_ID }}"
-  ARM_CLIENT_SECRET: "${{ secrets.AZURE_CLIENT_SECRET }}"
-  GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
 jobs:
   Github-Actions:
     name: "Github Actions"
@@ -35,7 +27,7 @@ jobs:
 
       - name: GitHub-Cli login
         run: |
-          echo "${{ secrets.TOKEN }}" | gh auth login --with-token
+          echo "${{ secrets.GH_TOKEN }}" | gh auth login --with-token
 
       - name: Set Secrets
         run: |
